--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <div class="menu__desktop">
                 <nav class="menu">
                     <ul class="menu__list flex">
-                        <li class="menu__item"><a href="#" class="menu__link">о чемпионате</a></li>
-                        <li class="menu__item"><a href="#" class="menu__link">новости</a></li>
-                        <li class="menu__item"><a href="#" class="menu__link">контакты</a></li>
+                        <li class="menu__item"><a href="#about" class="menu__link">о чемпионате</a></li>
+                        <li class="menu__item"><a href="#news" class="menu__link">новости</a></li>
+                        <li class="menu__item"><a href="#contacts" class="menu__link">контакты</a></li>
                     </ul>
                 </nav>
             </div>
@@ -35,9 +35,9 @@
                 </div>
                 <nav class="menu">
                     <ul class="menu__list flex">
-                        <li class="menu__item"><a href="#" class="menu__link">о чемпионате</a></li>
-                        <li class="menu__item"><a href="#" class="menu__link">новости</a></li>
-                        <li class="menu__item"><a href="#" class="menu__link">контакты</a></li>
+                        <li class="menu__item"><a href="#about" class="menu__link">о чемпионате</a></li>
+                        <li class="menu__item"><a href="#news" class="menu__link">новости</a></li>
+                        <li class="menu__item"><a href="#contacts" class="menu__link">контакты</a></li>
                     </ul>
                 </nav>
             </div>
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </section>
-        <section class="about">
+        <section class="about" id="about">
             <div class="container">
                 <div class="about__wrapper">
                     <span class="subtitle">о чемпионате</span>
@@ -176,7 +176,7 @@
                 <a class="who__link link__btn" href="#">Подать заявку на участие</a>
             </div>
         </section>
-        <section class="news">
+        <section class="news" id="news">
             <div class="container">
                 <img class="news__circle-left" src="img/cirlce_left.svg" alt="circle">
                 <img class="news__circle-right" src="img/circle_right.svg" alt="circle">
@@ -261,7 +261,7 @@
             </div>
             
         </section>
-        <section class="contacts">
+        <section class="contacts" id="contacts">
             <div class="container">
                 <img class="contacts__blur-s" src="img/blur_s.svg" alt="blur">
                 <img class="contacts__blur-l" src="img/blur_2.svg" alt="blur">
